<resources>
    <string name="app_name">CoffeeCraft</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm_exit_dialog">Are you sure you want to exit the app?</string>
    <string name="exit">Exit</string>
    <string name="text_splash1">Coffee So Good, Your Taste buds will love it</string>
    <string name="text_splash2">The best grain, the finest roast, the powerful flavor</string>
    <string name="get_started">Get Started</string>
    <string name="warning">Warning</string>
    <string name="no_internet">You don\'t have an internet connection.</string>
    <string name="ok">OK</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Full Name</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="login_welcome_text">Welcome back! Glad to see you, Again!</string>
    <string name="register_welcome_text">Hello, Register here to get started</string>
    <string name="dont_have_an_account">Don\'t have an account?</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="login_failed">Login failed. Please check your credentials and try again.</string>
    <string name="register_failed">Registration failed. Please try again later.</string>
    <string name="send_mail">Reset Link was sent to your email</string>
    <string name="empyt_mail">Email address is empty, so the reset link couldn\'t be sent</string>
    <string name="home">Home</string>
    <string name="all">All</string>
    <string name="americano">Americano</string>
    <string name="latte">Latte</string>
    <string name="espresso">Espresso</string>
    <string name="black_coffee">Black Coffee</string>
    <string name="cappuccino">Cappuccino</string>
    <string name="macchiato">Macchiato</string>
    <string name="home_desc">Find the best coffee for you</string>
    <string name="packets">Packets</string>
    <string name="search_text">Find Your Coffee..</string>
    <string name="with_milk">With Steamed Milk</string>
    <string name="cream">With Cream</string>
    <string name="ice">With Ice</string>
    <string name="chocolate">With Chocolate</string>
    <string name="white_chocolate">With White Chocolate</string>
    <string name="vanilla">With Vanilla</string>
    <string name="caramel">With Caramel</string>
    <string name="hazelnut">With Hazelnut</string>
    <string name="gram">gm</string>
    <string name="english_coffee">English Coffee</string>
    <string name="colombian_coffee">Colombian Coffee</string>
    <string name="italian_coffee">Italian Coffee</string>
    <string name="ottoman_coffee">Ottoman Coffee</string>
    <string name="turkish_coffee">Turkish Coffee</string>
    <string name="terebinth_coffee">Terebinth Coffee</string>
    <string name="local_coffees">Local Coffees</string>
    <string name="strawberry_cake">Strawberry Cake</string>
    <string name="cheesecake">Cheesecake</string>
    <string name="waffle">Waffle</string>
    <string name="crepe">Crepe</string>
    <string name="classic_cake">Classic Cake</string>
    <string name="not_found">Not Found</string>
    <string name="detail">Detail</string>
    <string name="price_format">$%.2f</string>
    <string name="medium_roasted">Medium Roasted</string>
    <string name="rating_counts">6,879</string>
    <string name="milk">Milk</string>
    <string name="coffee">Coffee</string>
    <string name="price">Price</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="product_coming_soon">Coming Soon</string>
    <string name="cakes">Cakes</string>
    <string name="my_order">My Order</string>
    <string name="order_received">Your order has been received</string>
    <string name="go_to_home_page">Go to Home Page</string>
    <string name="go_to_order_history">Go to Order History</string>
    <string name="order_history">Order History</string>
    <string name="order_id">Order ID: %1$s</string>
    <string name="order_date">Order Date: %1$s</string>
    <string name="product_name">Product Name: %1$s</string>
    <string name="price_order_history">Price: %1$s</string>
    <string name="quantity">Quantity: %1$s</string>
    <string name="total_price">Total Price: %1$s</string>
    <string name="empty_order_history">Your order history is empty.</string>
    <string name="order_detail_deleted">Order detail deleted!</string>
    <string name="my_cart">My Cart</string>
    <string name="product_added_to_cart">Product added to cart</string>
    <string name="product_already_in_cart">The product is already in your cart</string>
    <string name="product_removed_from_cart">Product removed from your cart</string>
    <string name="pay">Pay</string>
    <string name="empty_cart">Cart is Empty</string>
    <string name="must_login">You must be logged in to continue</string>
    <string name="first_price">$0.0</string>
    <string name="confirm_delete_product">Would you like to delete the product?</string>
    <string name="start_shopping">Start Shopping</string>
    <string name="my_favorites">My Favorites</string>
    <string name="product_added_to_favorites">Product added to favorites</string>
    <string name="product_already_in_favorites">The product is already in your favorites</string>
    <string name="product_removed_from_favorites">Product removed from your favorites</string>
    <string name="empty_favorites">Favorites is Empty</string>
    <string name="description">Description</string>
    <string name="unexpected_error">An unexpected error occurred</string>
    <string name="description_americano">The Americano is another popular type of coffee drink, and it\'s very easy to make! It\'s just espresso with hot water dripping over it. The name came about during World War II when European baristas added water to their espresso drinks for the American soldiers stationed there. The resulting drink had a smoother, less concentrated flavour than espresso and thus the Americano was born.</string>
    <string name="description_black_coffee">Black coffee is arguably the most common type of coffee drink out there. Its popularity can be mainly attributed to how easy it is to make this beverage, be it drip, pour-over, French press, or anything else. Black coffee is usually served with no add-ins.</string>
    <string name="description_cappuccino">Cappuccinos are a classic Italian type of coffee drink made of espresso, steamed milk, and thick foam in equal parts. The name comes from the resemblance to the hoods worn by Capuchin monks. Making cappuccino is relatively easy and can be done at home too if you know how to make espresso.</string>
    <string name="description_espresso">"Espresso is made by forcing nearly boiling water through finely-ground coffee beans, which results in a concentrated, syrup-like coffee drink. This is the base for many Italian beverages in coffee shops. When compared to regular brewed coffee, espresso is much stronger than the other types of coffee drinks. Espressos are enjoyed in shots where a single shot is one ounce and a long (single and double) shot is two ounces in amount, respectively.</string>
    <string name="description_latte">"A latte is an espresso with steamed milk and a dollop of milk foam on top. This beverage is more prevalent in America than other coffee drinks like cappuccinos because it contains less foam, making it smoother and gentler for those with sensitive palettes. And if you want to spice up your latte, add some flavouring syrup. To make an iced version of this drink, simply pour espresso and steamed milk over ice cubes.</string>
    <string name="description_macchiato">"The word \"macchiato\" means spotted, so a macchiato espresso is an espresso with a splash of milk. Most coffee shops will top off this type of coffee drink with some foamed milk instead of just steamed milk for what's known as a traditional macchiato.</string>
    <string name="english_coffee_description">A classic and refined blend from England that reflects the mystical atmosphere of the country. English coffee is obtained by carefully blending classic beans and offers a search for meaning in every cup.</string>
    <string name="colombian_coffee_description">Rich and smooth coffee from Colombia, coming from the fertile soils of the country. This coffee offers the unique taste of carefully cultivated beans and is produced through refined processing techniques to delight coffee enthusiasts.</string>
    <string name="italian_coffee_description">Bold and aromatic coffee from Italy, reflecting the passionate palate of the country. This coffee, obtained from robust beans, stands out with its intense aroma and is a symbol of Italian coffee culture.</string>
    <string name="ottoman_coffee_description">An exotic coffee inspired by the rich history of the Ottoman Empire, offering the magic of history in a cup. Ottoman coffee stands out through special processing methods and provides a unique experience.</string>
    <string name="turkish_coffee_description">Turkish coffee, known for its foamy and strong aroma, is the traditional beverage of Turkey. Prepared with a special cooking technique, this coffee reflects Turkish coffee culture with its unique presentation.</string>
    <string name="terebinth_coffee_description">A unique and fragrant coffee infused with terebinth, enriching the flavors of nature. This coffee, combining the unique aromas of nature, offers a special taste experience.</string>
    <string name="description_strawberry_cake">A delicious cake adorned with fresh strawberries and filled with cream. Perfect dessert for strawberry lovers, offering a delightful blend of flavors!</string>
    <string name="description_crepe">A light and tasty crepe served with sweet or savory fillings. A classic of French cuisine, providing a delightful culinary experience!</string>
    <string name="description_waffle">A crispy yet fluffy waffle served warm with various toppings like fresh fruits, syrup, or ice cream. An irresistible sweet treat, perfect for indulgence!</string>
    <string name="description_classic_cake">A classic vanilla cake with chocolate or vanilla frosting. A simple yet delicious dessert for any occasion, offering a delightful taste of nostalgia!</string>
    <string name="description_cheesecake">A rich and creamy dessert made with cream cheese on a crumbled biscuit base. A favorite among cheese dessert lovers, providing a delightful and indulgent experience!</string>
    <string name="payment_information">Payment Information</string>
    <string name="card_holder_name">Card Holder Name</string>
    <string name="expiry_date_title">Expiry Date</string>
    <string name="wallet">Wallet</string>
    <string name="pay_google">Google Pay</string>
    <string name="pay_amazon">Amazon Pay</string>
    <string name="add_card">Add Card</string>
    <string name="name_the_card">Name The Card</string>
    <string name="card_number">Card Number</string>
    <string name="card_expiration_date">Card Expiration Date</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_dialog">Are you sure you want to log out?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="contact_information">Contact Information</string>
    <string name="address_information">Address Information</string>
    <string name="receiver_phone_number">Recipient Phone Number</string>
    <string name="add_to_address_book">Add to Address Book</string>
    <string name="reset_password">Reset Password</string>
    <string name="reset_password_message">We will send you password reset link on your Email</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
</resources>